--- a/java/pom.xml
+++ b/java/pom.xml
@@ -310,7 +310,7 @@
 						<Bundle-Vendor>ToolFactory</Bundle-Vendor>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Require-Capability>osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version=1.7))"</Require-Capability>
-						<Import-Package>io.github.toolfactory.narcissus;version="${narcissus.version}",com.sun.management,jdk.internal.reflect;resolution:=optional,sun.misc;resolution:=optional,sun.reflect;resolution:=optional</Import-Package>
+						<Import-Package>io.github.toolfactory.narcissus;version="1.0.7",com.sun.management,jdk.internal.reflect;resolution:=optional,sun.misc;resolution:=optional,sun.reflect;resolution:=optional</Import-Package>
 						<Multi-Release>true</Multi-Release>
 					</instructions>
 				</configuration>
