Removed test on Ubuntu x86 with JDK 10

--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -93,6 +93,9 @@ jobs:
         exclude:
           - os: macOS-latest
             architecture: x86
+          - os: ubuntu-latest
+            architecture: x86
+            java: 10
           - architecture: x64
             java: 10
           - architecture: x86
