--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -125,7 +125,7 @@ jobs:
         architecture: [x64]
         distribution: [semeru]
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [11, 16, 17, 18, 19, 20, 21, 22, 23, 24]
+        java: [11, 16, 17, 18, 19, 20, 21, 22, 23]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
