--- a/java/pom.xml
+++ b/java/pom.xml
@@ -29,7 +29,7 @@
 
 	<groupId>io.github.toolfactory</groupId>
 	<artifactId>jvm-driver</artifactId>
-	<version>9.9.8-SNAPSHOT</version>
+	<version>9.9.8</version>
 
 	<packaging>jar</packaging>
 
@@ -129,7 +129,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/toolfactory/jvm-driver</url>
-		<tag>HEAD</tag>
+		<tag>jvm-driver-9.9.8</tag>
 	</scm>
 
 	<dependencies>
